--- a/Hw4/shopline.html
+++ b/Hw4/shopline.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="reset.css">
     <script src="https://kit.fontawesome.com/896690462a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="shopline.css">
+    <!-- <link rel="stylesheet" href="992.css"> -->
 </head>
 <body>
     <input type="checkbox" name="" id="menu-control">
@@ -21,50 +22,54 @@
         </div>
     </div>
     <header>
-        <div class="logo">
-            <img src="SHOPLINE.PNG" alt="shopline-logo">
-        </div>
-        <label for="menu-control" class="hb">
-            <i class="fa-solid fa-bars"></i>
-        </label>
-        <div class="about">
-            <nav>
-                <a href="#">開店服務</a>
-                <a href="#">方案費用</a>
-                <a href="#">客戶案例</a>
-                <a href="#">開店說明會</a>
-                <a href="#">開店諮詢</a>
-                <a href="#">更多解決方案</a>
-                <a href="#">其他資源</a>
-                <a href="#" class="freeTry">免費試用</a>
-            </nav>
-            <div class="btn">
-                <div class="free-try">
-                    <a href="#">免費試用</a>
-                </div>
-                <div class="sign-in">
-                    <a href="#">登入商店</a>
+        <div class="main-header">
+            <div class="logo">
+                <img src="SHOPLINE.PNG" alt="shopline-logo">
+            </div>
+            <label for="menu-control" class="hb">
+                <i class="fa-solid fa-bars"></i>
+            </label>
+            <div class="about">
+                <nav>
+                    <a href="#">開店服務</a>
+                    <a href="#">方案費用</a>
+                    <a href="#">客戶案例</a>
+                    <a href="#">開店說明會</a>
+                    <a href="#">開店諮詢</a>
+                    <a href="#">更多解決方案</a>
+                    <a href="#">其他資源</a>
+                    <a href="#" class="freeTry">免費試用</a>
+                </nav>
+                <div class="btn">
+                    <div class="free-try">
+                        <a href="#">免費試用</a>
+                    </div>
+                    <div class="sign-in">
+                        <a href="#">登入商店</a>
+                    </div>
                 </div>
             </div>
+            <div class="start-business">
+                <p>開店諮詢</p>
+                <p>|</p>
+                <p>開店說明會</p>
+            </div> 
         </div>
-        <div class="start-business">
-            <p>開店諮詢</p>
-            <p>|</p>
-            <p>開店說明會</p>
-        </div> 
     </header>
     <section>
-        <div class="pic">
-            <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/6191b397e9f2f00026722389/505x.webp?source_format=png" alt="零售POS系統">
-        </div>
-        <div class="txt">
-            <h2>想在哪開店創業? 
-                <br>
-                <span>門市必備零售POS系統</span>
-            </h2>
-            <p>超過 35 萬品牌使用！從個人賣家到國際品牌，都能以 SHOPLINE 實現全通路零售，快速拓展市場到世界各地，輕鬆開始你的『 店 』商生意！</p>
-            <input type="email" placeholder="請在此輸入電子信箱(可隨時更換)">
-            <button>免費試用</button>
+        <div class="main-section">
+            <div class="pic">
+                <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/6191b397e9f2f00026722389/505x.webp?source_format=png" alt="零售POS系統">
+            </div>
+            <div class="txt">
+                <h2>想在哪開店創業? 
+                    <br>
+                    <span>門市必備零售POS系統</span>
+                </h2>
+                <p>超過 35 萬品牌使用！從個人賣家到國際品牌，都能以 SHOPLINE 實現全通路零售，快速拓展市場到世界各地，輕鬆開始你的『 店 』商生意！</p>
+                <input type="email" placeholder="請在此輸入電子信箱(可隨時更換)">
+                <button>免費試用</button>
+            </div>
         </div>
     </section>
     <div class="main-txt">
@@ -74,7 +79,7 @@
             </h2>
             <p>從網路商店架站到實體門市管理，只需要一個平台，就能輕鬆實現開店創業，並能同步管理所有銷售管道，SHOPLINE 助你賣得更多、賣得更好！</p>
         </div>
-        <div class="inrow">
+        <div class="inrow ">
             <div class="intxt">
                 <div class="pic">
                     <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/60b0c566ec23b10026db7112/565x.webp?source_format=png" alt="">
@@ -229,151 +234,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="intxt">
-            <div class="pic">
-                <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/60b0c566ec23b10026db7112/565x.webp?source_format=png" alt="">
-            </div>
-            <h3>
-                免寫程式、多款版型 <br> 輕鬆打造全能電商網站
-            </h3>
-            <p>不會寫程式也能輕鬆架設品牌電商官網！任何產業都能找到合適的專業設計版型，以滑鼠拖曳就能完成網頁編輯，讓架設網站就像堆積木一樣簡單。</p>
-            <ul>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    豐富版型主題與字型搭配
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    RWD 響應式網頁設計
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    獨有網址 ＆ SSL 安全憑證
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    SEO 搜尋引擎優化
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    一頁商店
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    開放 HTML／CSS 編輯
-                </li>
-            </ul>
-            <a href="#" >看看開店密技 →</a>
-        </div>
-        <div class="intxt">
-            <div class="pic">
-                <img src="https://img.shoplineapp.com/media/image_clips/60a4d354a8bff100235bea59/original.png?1621414740" alt="">
-            </div>
-            <h3>
-                支持海內外電商 <br> 金流、物流一次搞定
-            </h3>
-            <p>支持在地及國際金流、物流串接服務，提供海內外顧客最便利的付款及送貨服務，加速消費者完成下單交易，大幅降低購物車放棄率！</p>
-            <ul>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    線上信用卡刷卡
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    第三方金流／行動支付整合
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    超商代碼／條碼繳費
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    多溫層宅配並指定運費
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    超商／宅配貨到付款
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    發票開立與串接
-                </li>
-            </ul>
-            <a href="#" >了解更多金物流 →</a>
-        </div>
-        <div class="intxt">
-            <div class="pic">
-                <img src="https://img.shoplineapp.com/media/image_clips/60a4d354df356c0012a8a223/original.png?1621414740" alt="">
-            </div>
-            <h3>
-                刺激下單，創造回購 <br>行銷導流、促購模組任你玩
-            </h3>
-            <p>多元優惠活動、會員集客機制、網紅分潤以及直播購物等豐富功能，將電商行銷玩法一網打盡，助你成功優化行銷活動成效，刺激顧客下單、吸引鐵粉回購！</p>
-            <ul>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    超過 20 種優惠促銷功能
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    社群直播購物系統
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    會員分級／點數／購物金
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    Facebook／Google／LINE 廣告追蹤
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    Instagram 購物功能
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    Facebook／Instagram／LINE 對話式購物
-                </li>
-            </ul>
-            <a href="#" >看更多優惠模組 →</a>
-        </div>
-        <div class="intxt">
-            <div class="pic">
-                <img src="https://img.shoplineapp.com/media/image_clips/60a4d3540289ef002f2150cb/original.png?1621414740" alt="">
-            </div>
-            <h3>
-                O2O 全通路無縫整併 <br>
-                輕鬆管理網店、門市以及其他通路
-            </h3>
-            <p>不論是網店拓展門市，還是門市想發展網路生意，從商品、庫存、訂單等各項虛實店舖的資料都能完善整併，輕鬆實現全通路會員經營到多店營運。</p>
-            <ul>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    門市 POS 系統
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    線上線下會員／商品／庫存整合
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    門市快速集客工具
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    O2O 即時銷售報表分析
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    進銷庫存／調撥／多店管理
-                </li>
-                <li>
-                    <i class="fa-solid fa-circle-check"></i>
-                    串接 Shopee 蝦皮購物庫存
-                </li>
-            </ul>
-            <a href="#" >了解更多全通路整合 →</a>
-        </div> -->
     </div>
     <div class="function">
         <h2>更多更能與服務</h2>
