--- a/Hw4/shopline.html
+++ b/Hw4/shopline.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,14 +11,15 @@
     <link rel="stylesheet" href="shopline.css">
     <!-- <link rel="stylesheet" href="992.css"> -->
 </head>
+
 <body>
-    <input type="checkbox" name="" id="menu-control">
+    <input type="checkbox" id="menu-control">
     <div class="enter">
         <div class="sign">
             <i class="fa-solid fa-globe"></i>
-            <span >
-                <a href="#" >|   幫助中心</a>
-                <a href="#" >登入網站</a>
+            <span>
+                <a href="#">| 幫助中心</a>
+                <a href="#">登入網站</a>
             </span>
         </div>
     </div>
@@ -53,16 +55,17 @@
                 <p>開店諮詢</p>
                 <p>|</p>
                 <p>開店說明會</p>
-            </div> 
+            </div>
         </div>
     </header>
     <section>
         <div class="main-section">
             <div class="pic">
-                <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/6191b397e9f2f00026722389/505x.webp?source_format=png" alt="零售POS系統">
+                <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/6191b397e9f2f00026722389/505x.webp?source_format=png"
+                    alt="零售POS系統">
             </div>
             <div class="txt">
-                <h2>想在哪開店創業? 
+                <h2>想在哪開店創業?
                     <br>
                     <span>門市必備零售POS系統</span>
                 </h2>
@@ -74,17 +77,18 @@
     </section>
     <div class="main-txt">
         <div class="title">
-            <h2>單一平台就能協助你 <br> 
+            <h2>單一平台就能協助你 <br>
                 在全台通路輕鬆開店創業
             </h2>
             <p>從網路商店架站到實體門市管理，只需要一個平台，就能輕鬆實現開店創業，並能同步管理所有銷售管道，SHOPLINE 助你賣得更多、賣得更好！</p>
         </div>
         <div class="inrow ">
-            <div class="intxt">
+            <div class="intxt col-md-12">
                 <div class="pic">
-                    <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/60b0c566ec23b10026db7112/565x.webp?source_format=png" alt="">
+                    <img src="https://shoplineimg.com/59c0fd06080f0690b5000cd1/60b0c566ec23b10026db7112/565x.webp?source_format=png"
+                        alt="">
                 </div>
-                <div class="txt">
+                <div class="txt ">
                     <h3>
                         免寫程式、多款版型 <br> 輕鬆打造全能電商網站
                     </h3>
@@ -115,12 +119,13 @@
                             開放 HTML／CSS 編輯
                         </li>
                     </ul>
-                    <a href="#" >看看開店密技 →</a>
+                    <a href="#">看看開店密技 →</a>
                 </div>
             </div>
             <div class="intxt">
                 <div class="pic">
-                    <img src="https://img.shoplineapp.com/media/image_clips/60a4d354a8bff100235bea59/original.png?1621414740" alt="">
+                    <img src="https://img.shoplineapp.com/media/image_clips/60a4d354a8bff100235bea59/original.png?1621414740"
+                        alt="">
                 </div>
                 <div class="txt">
                     <h3>
@@ -153,12 +158,13 @@
                             發票開立與串接
                         </li>
                     </ul>
-                    <a href="#" >了解更多金物流 →</a>
+                    <a href="#">了解更多金物流 →</a>
                 </div>
             </div>
             <div class="intxt">
                 <div class="pic">
-                    <img src="https://img.shoplineapp.com/media/image_clips/60a4d354df356c0012a8a223/original.png?1621414740" alt="">
+                    <img src="https://img.shoplineapp.com/media/image_clips/60a4d354df356c0012a8a223/original.png?1621414740"
+                        alt="">
                 </div>
                 <div class="txt">
                     <h3>
@@ -191,12 +197,13 @@
                             Facebook／Instagram／LINE 對話式購物
                         </li>
                     </ul>
-                    <a href="#" >看更多優惠模組 →</a>
+                    <a href="#">看更多優惠模組 →</a>
                 </div>
             </div>
             <div class="intxt">
                 <div class="pic">
-                    <img src="https://img.shoplineapp.com/media/image_clips/60a4d3540289ef002f2150cb/original.png?1621414740" alt="">
+                    <img src="https://img.shoplineapp.com/media/image_clips/60a4d3540289ef002f2150cb/original.png?1621414740"
+                        alt="">
                 </div>
                 <div class="txt">
                     <h3>
@@ -230,7 +237,7 @@
                             串接 Shopee 蝦皮購物庫存
                         </li>
                     </ul>
-                    <a href="#" >了解更多全通路整合 →</a>
+                    <a href="#">了解更多全通路整合 →</a>
                 </div>
             </div>
         </div>
@@ -257,7 +264,7 @@
                 <img src="function4.png" alt="專業顧問線上支援">
                 <h3>專業顧問線上支援</h3>
                 <p class="inp">迅速、透明的溝通管道，協助你快速解決從線上到線下、從在地到海外的網店疑難。</p>
-            </div >
+            </div>
             <div class="inserve">
                 <img src="function5.png" alt="廣告行銷加值服務">
                 <h3>廣告行銷加值服務</h3>
@@ -269,29 +276,30 @@
                 <p class="inp">致力為品牌店家打造能深度交流且互助的生態體系，是拓展人脈、商機的絕佳場域。</p>
             </div>
         </div>
-        </div>
+    </div>
     </div>
     <div class="brand">
         <div class="recommend">
             <h2>
-                <span>人氣品牌</span> 
+                <span>人氣品牌</span>
                 一致推薦使用
             </h2>
             <div class="brand-pic"><img src="BONNY.PNG" alt="bonny" width="200px" height="146px"></div>
             <div class="brand-pic"><img src="NUT.PNG" alt="團圓堅果" width="200px" height="146px"></div>
-            <div class="brand-pic"><img src="SNATCH.PNG" alt="snatch"         width="200px" height="146px"></div>
-            <div class="brand-pic"><img src="XUXUWEAR.PNG" alt="許許兒"       width="200px" height="146px"></div>
-            <div class="brand-pic"><img src="FXQM.PNG" alt="淡果香"       width="200px" height="146px"></div>
+            <div class="brand-pic"><img src="SNATCH.PNG" alt="snatch" width="200px" height="146px"></div>
+            <div class="brand-pic"><img src="XUXUWEAR.PNG" alt="許許兒" width="200px" height="146px"></div>
+            <div class="brand-pic"><img src="FXQM.PNG" alt="淡果香" width="200px" height="146px"></div>
             <div class="pop">
                 <div class="inshow">
                     <div class="pic">
-                        <img src="https://img.shoplineapp.com/media/image_clips/5f06bed2436e2b86c4471215/original.jpg?1594277585" alt="BONNY & READ" >
+                        <img src="https://img.shoplineapp.com/media/image_clips/5f06bed2436e2b86c4471215/original.jpg?1594277585"
+                            alt="BONNY & READ">
                     </div>
                 </div>
                 <div class="inshow">
                     <a href="#">bonnyread.com.tw →</a>
                     <p>
-                    SHOPLINE再行動裝置上超做的順暢度很高;使用者給的建議與意見會採納，處理的速度也不錯;還一直有新功能推出，不斷成長。
+                        SHOPLINE再行動裝置上超做的順暢度很高;使用者給的建議與意見會採納，處理的速度也不錯;還一直有新功能推出，不斷成長。
                     </p>
                     <span>-BONNY & READ 店長,Stan</span>
                     <div class="dot">
@@ -320,12 +328,13 @@
             <div class="txt">
                 <p>全亞洲超過 <br> 350,000個品牌都在使用SHOPLINE</p>
                 <button>免費試用14天 →</button>
-                <img src="https://img.shoplineapp.com/media/image_clips/609d0f5c33fdc6001aa95da6/original.png?1620905820" alt="">
+                <img src="https://img.shoplineapp.com/media/image_clips/609d0f5c33fdc6001aa95da6/original.png?1620905820"
+                    alt="">
             </div>
         </div>
     </div>
     <div class="more-infro">
-        <div class="footerwrap">
+        <!-- <div class="footerwrap">
             <div class="footer">
                 <div class="footercol">
                     <h3>SHOPLINE</h3>
@@ -401,6 +410,125 @@
                     </ul>
                 </div>
             </div>
+        </div> -->
+        <input type="checkbox" id="footer_SHOPLINE">
+        <input type="checkbox" id="footer_OpenShop">
+        <input type="checkbox" id="footer_Function">
+        <input type="checkbox" id="footer_Resource">
+        <input type="checkbox" id="footer_Soultion">
+        <input type="checkbox" id="footer_OtherResource">
+        <input type="checkbox" id="footer_Application">
+        <div class="footerwrap">
+            <div class="footer">
+                <div class="footertxt">
+                    <div class="footercol">
+                        <h3>SHOPLINE</h3>
+                        <label for="footer_SHOPLINE">
+                            <i class="fa-solid fa-angle-down"></i>
+                        </label>
+                    </div>
+                    <ul class="SHOPLINE">
+                        <li><a href="">關於我們</a></li>
+                        <li><a href="">認識團隊</a></li>
+                        <li><a href="">人才招募</a></li>
+                        <li><a href="">合作機會</a></li>
+                        <li><a href="">精選夥伴</a></li>
+                        <li><a href="">媒體報導</a></li>
+                    </ul>
+                </div>
+                <div class="footertxt">
+                    <div class="footercol">
+                        <h3>我要開店</h3>
+                        <label for="footer_OpenShop">
+                            <i class="fa-solid fa-angle-down"></i>
+                        </label>
+                    </div>
+                    <ul class="OpenShop">
+                        <li><a href="">方案費用</a></li>
+                        <li><a href="">功能模組</a></li>
+                        <li><a href="">客戶案例</a></li>
+                        <li><a href="">開店說明</a></li>
+                        <li><a href="">開店諮詢</a></li>
+                    </ul>
+                </div>
+                <div class="footertxt">
+                    <div class="footercol">
+                        <h3>功能特色</h3>
+                        <label for="footer_Function">
+                            <i class="fa-solid fa-angle-down"></i>
+                        </label>
+                    </div>
+                    <ul class="Function">
+                        <li><a href="">網路開店</a></li>
+                        <li><a href="">社群購物</a></li>
+                        <li><a href="">零售POS</a></li>
+                        <li><a href="">網路商店</a></li>
+                        <li><a href="">網站製作</a></li>
+                        <li><a href="">店商物流</a></li>
+                        <li><a href="">訂單管理</a></li>
+                        <li><a href="">一頁商店</a></li>
+                    </ul>
+                </div>
+                <div class="footertxt">
+                    <div class="footercol">
+                        <h3>開店資訊</h3>
+                        <label for="footer_Resource">
+                            <i class="fa-solid fa-angle-down"></i>
+                        </label>
+                    </div>
+                    <ul class="Resource">
+                        <li><a href="">開店密技</a></li>
+                        <li><a href="">版型主題</a></li>
+                        <li><a href="">新手問答</a></li>
+                        <li><a href="">POS硬體</a></li>
+                        <li><a href="">最新功能</a></li>
+                    </ul>
+                </div>
+                <div class="footertxt">
+                    <div class="footercol">
+                        <h3>更多解決方案</h3>
+                        <label for="footer_Soultion">
+                            <i class="fa-solid fa-angle-down"></i>
+                        </label>
+                    </div>
+                    <ul class="Soultion">
+                        <li><a href="">企業旗艦方案</a></li>
+                        <li><a href="">跨境電商方案</a></li>
+                        <li><a href="">廣告計劃方案</a></li>
+                    </ul>
+                </div>
+                <div class="footertxt">
+                    <div class="footercolspecial">
+                        <h3>其他資源</h3>
+                        <label for="footer_OtherResource">
+                            <i class="fa-solid fa-angle-down"></i>
+                        </label>
+                    </div>
+                    <ul class="OtherResource">
+                        <li><a href="">電商教室</a></li>
+                        <li><a href="">充電工作坊</a></li>
+                        <li><a href="">DreamBig創品牌</a></li>
+                        <li><a href="">電商成長學苑</a></li>
+                        <li><a href="">SHOPLINE TRENDS 電商數據庫</a></li>
+                        <li><a href="">LINE 官方帳號</a></li>
+                    </ul>
+                </div>
+                <div class="footertxt">
+                    <div class="footercol">
+                        <h3>應用案例</h3>
+                        <label for="footer_Application">
+                            <i class="fa-solid fa-angle-down"></i>
+                        </label>
+                    </div>
+                    <ul class="Application">
+                        <li><a href="">SHOPLINE Payments</a></li>
+                        <li><a href="">網紅口碑行銷方案</a></li>
+                        <li><a href="">實體零售</a></li>
+                        <li><a href="">IG直播+1</a></li>
+                        <li><a href="">社群電商工具包</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="C19">
             <div class="COVID-19">
@@ -427,9 +555,10 @@
                 <p>
                     服務時間 星期一至五 上午 10 點至晚上 7 點 <br>
                     ©Copyright 2013-22 SHOPLINE Limited.
-                </p> 
+                </p>
             </div>
         </div>
     </div>
 </body>
+
 </html>
