--- a/JavaScript/ultimate_password.html
+++ b/JavaScript/ultimate_password.html
@@ -26,11 +26,11 @@
     <div class="container  ">
         <div class="row m-auto mt-2">
             <div class="card">
-                <button class="btn btn-outline-secondary " id="btn" type="button">開始/重玩</button>
+                <button class="btn btn-secondary " id="btn" type="button">開始/重玩</button>
                 <div class="box">
                     <p class="text-center my-2" id="p"></p>
                 </div>
-                <input type="text " class="form-control"  aria-label="Recipient's username with two button addons">
+                <input type="text " class="form-control text-center"  aria-label="Recipient's username with two button addons">
                 <div class="col-12 text-center mb-2 mt-2">
                     <button class="btn_num btn-outline-secondary col-3 btn-dark text-white " type="button" >1</button>
                     <button class="btn_num btn-outline-secondary col-3 btn-dark text-white "  type="button">2</button>
@@ -67,22 +67,29 @@
             input =  document.querySelector("input");
             p=document.getElementById('p');
             p.innerText=`${m}~${M}`
-
+            btn_check=document.getElementById('btn_check');
             btn=document.getElementById('btn');
+            btns=document.querySelectorAll('.btn_num');
+            btn_clear=document.getElementById('btn_clear');
+
+                btn_check.disabled=true;
+                btn_clear.disabled=true;
+
+
             btn.addEventListener("click",  ()=> {
                 document.querySelector("input").innerTxt;
                 input.value = "";
                 randomnum();
+                btn_check.disabled=false;
+                btn_clear.disabled=false;
             });
 
-            btns=document.querySelectorAll('.btn_num');
             btns.forEach((btn,index)=>{
                 btn.addEventListener('click',(event)=>{
                     input.value += event.target.innerText;
                 })
             })
 
-            btn_clear=document.getElementById('btn_clear');
             btn_clear.addEventListener("click",  ()=> {
                 document.querySelector("input").innerTxet;
                 input.value = "";
@@ -92,29 +99,30 @@
                 random=Math.floor(Math.random()*(M-m)+m);
             }
 
-            btn_check=document.getElementById('btn_check');
             btn_check.addEventListener("click",  ()=> {
                 document.querySelector("input").innerTxet;
+                my_ans=parseInt(input.value);
+                if(my_ans>M || my_ans<m){
+                    alert("請輸入範圍內的數字")
+                }
+
                 if(input.value==random){
-                    alert(`你答對了`);
+                    alert(`恭喜你答對了`);
                     input.value = "";
                     p.innerText=`${1}~${100}`;
                 }
                 else{
-                    alert(`你錯了`);
-                    my_ans=parseInt(input.value);
                     if(my_ans>random){
                         M=my_ans
                         p.innerText=`${m}~${M}`
                         input.value = "";
                     }
-                    else if(my_ans<random){
+                    else {
                         m=my_ans
                         p.innerText=`${m}~${M}`
                         input.value = "";
                     }
                 }
-                // check();
             });
 
 
